# rgss_script_editor

./: .gitignore  CMakeLists.txt  README.txt
Modules/: FindQScintilla.cmake
src/: cli.cxx  main.cxx  ruby_data.cxx  ruby_data.hxx
src/qt/: editor_widget.cxx  editor_widget.hxx  goto_line_dialog.cxx  goto_line_dialog.hxx  line_edit.hxx  main_window.cxx  main_window.hxx  pinned_script_list.cxx  pinned_script_list.hxx  savediscard_dialog.cxx  savediscard_dialog.hxx  script_archive.cxx  script_archive.hxx  search_bar.cxx  search_bar.hxx
